# plurai-plugins

./: .gitignore  .mcp.json  CLAUDE.md  README.md  dev-restart.sh  install.sh  package.json  pyproject.toml  run.sh  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: check-linear-issue.yml
commands/: eval.md  judge.md  login.md
docs/rfcs/: 0001-web-broker-cli-auth.md
hooks/: check-auth.sh  hooks.json
skills/eval/: SKILL.md
skills/evaluator/: SKILL.md
skills/judge-evaluator/: SKILL.md
src/: auth.py  auth_chrome.py  server.py
src/evals_mcp/: __init__.py  __main__.py  config.py  errors.py  server.py  state.py
src/evals_mcp/auth/: __init__.py  auth.py
src/evals_mcp/clients/: __init__.py  agent.py  base.py  models.py  platform.py
src/evals_mcp/tools/: __init__.py  classifiers.py  data.py  evaluator.py  judge.py
src/pluto_judge/: __init__.py  __main__.py  config.py  errors.py  http.py  server.py  state.py
src/pluto_judge/auth/: __init__.py  auth.py  broker.py  chrome.py
src/pluto_judge/clients/: __init__.py  agent.py  models.py  pluto.py
src/pluto_judge/tools/: __init__.py  classifiers.py  data.py  judge.py
test/cli-auth-broker/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  test-flow.js  tsconfig.json  vite.config.ts  vitest.config.ts
test/cli-auth-broker/src/: App.tsx  decodeJwt.ts  main.tsx  validateParams.ts  vite-env.d.ts
test/cli-auth-broker/test/: decodeJwt.test.ts  validateParams.test.ts
tests/: conftest.py  test_agent_client.py  test_auth.py  test_config.py  test_lifespan.py  test_platform_plan_integration.py  test_tools.py
