[project]
name = "pluto-judge"
version = "0.2.0"
description = "Claude Code MCP server for creating LLM-as-a-judge evaluators via the Pluto platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Plurai AI", email = "team@plurai.ai" }]
keywords = ["mcp", "claude-code", "llm-as-a-judge", "evaluation", "pluto"]
dependencies = [
  "mcp[cli]>=1.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "tenacity>=8.2",
  "httpx-sse>=0.4",
]

[project.scripts]
pluto-judge = "pluto_judge.__main__:main"

[project.urls]
Homepage = "https://pluto.plurai.ai"
Repository = "https://github.com/plurai-ai/pluto-judge"

[dependency-groups]
dev = [
  "ruff",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pluto_judge"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/pluto_judge/auth"]   # Pre-existing urllib code; refactor in follow-up PR.

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src/pluto_judge", "tests"]
exclude = ["src/pluto_judge/auth/**"]   # Pre-existing urllib code; refactor in follow-up PR.
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
