[project]
name = "evals-mcp"
version = "0.3.0"
description = "Claude Code MCP server for creating LLM-as-a-judge evaluators on the Plurai platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Plurai AI", email = "team@plurai.ai" }]
keywords = ["mcp", "claude-code", "llm-as-a-judge", "evaluation", "evals"]
dependencies = [
  "mcp[cli]>=1.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "tenacity>=8.2",
  "httpx-sse>=0.4",
]

[project.scripts]
evals-mcp = "evals_mcp.__main__:main"

[project.urls]
Homepage = "https://plurai.ai"
Repository = "https://github.com/plurai-ai/plurai-plugins"

[dependency-groups]
dev = [
  "ruff",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evals_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/evals_mcp/auth"]   # Pre-existing urllib code; refactor in follow-up PR.

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src/evals_mcp", "tests"]
exclude = ["src/evals_mcp/auth/**"]   # Pre-existing urllib code; refactor in follow-up PR.
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
